fixing image colour in dark mode

--- a/_static/custom.css
+++ b/_static/custom.css
@@ -227,7 +227,7 @@ html[data-theme="dark"] h6 {
 }
 
 html[data-theme="dark"] img:not(.only-dark, .dark-light) {
-  filter: brightness(.9) contrast(1.2);
+  filter: brightness(1) contrast(1.2);
 }
 
 /* Sidebar links styling - dark theme */
